Fix whitespace on sides of page and under some titles

--- a/content/pages/index.css
+++ b/content/pages/index.css
@@ -5,7 +5,6 @@
 .page-index {
 	display: flex;
 	flex-direction: column;
-	padding: 12px;
 	max-width: 800px;
 }
 
